<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.group.peach.thewalkingschoolbus.EditProfileActivity">
    <ScrollView android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/tableLayout2">

        <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/text_name"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:text="@string/text_username"
            android:textAlignment="textStart"
            android:textSize="16sp" />
    </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/text_email"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/text_useremail"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:text="@string/text_useremail"
                android:textAlignment="textStart"
                android:textSize="16sp" />

        </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_date_of_birth_year"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_useryear"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:inputType="date"
            android:text=""
            android:textSize="16sp" />
    </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_date_of_birth_month"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/text_usermonth"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="16sp" />
        </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/hphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_home_phone"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_userhphone"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:text=""
            android:textAlignment="textStart"
            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cell_phone"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_usercphone"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:text="@string/text_usercphone"
            android:textAlignment="textStart"
            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_address"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_useraddress"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:text="@string/text_useraddress"
            android:textSize="16sp" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_emergency"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/text_emergency"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_useremergency"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:inputType="textLongMessage"
            android:text="@string/text_useremergency"
            android:textSize="16sp" />
    </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_grade"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/text_usergrade"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:inputType="textLongMessage"
                android:text="@string/student_only"
                android:textSize="16sp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/text_userteacher"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:inputType="textLongMessage"
                android:text="@string/student_only"
                android:textSize="16sp"/>

        </TableRow>
    </TableLayout>

    </RelativeLayout>


    </ScrollView>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ScrollView01"
        android:background="#fffdc9"
        android:gravity="center"
        android:text="@string/text_save" />


</RelativeLayout>

