<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.group.peach.thewalkingschoolbus.LoginActivity">

    <EditText
        android:id="@+id/EmailEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/PasswordEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/EmailEnter"
        android:layout_below="@+id/EmailEnter"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:text="@string/do_not_have_an_account" />

    <Button
        android:id="@+id/Loginbtn"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Registerbtn"
        android:layout_below="@+id/PasswordEnter"
        android:layout_marginTop="31dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/Registerbtn"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/register" />

</RelativeLayout>