<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_groupDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groupDialogTitle"
            android:textSize="16sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dialogRecyclerView"
            android:padding="10dp"
            android:layout_below="@+id/txt_groupDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scrollbars="vertical" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_below="@+id/dialogRecyclerView">

            <Button
                android:id="@+id/btn_groupCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/btnCancel"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />


            <Button
                android:id="@+id/btn_groupRemove"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/btnRemove"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <Button
                android:layout_gravity="end"
                android:id="@+id/btn_groupConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/btnAdd"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />


        </LinearLayout>

    </RelativeLayout>



</LinearLayout>